src/components/SignInForm/styles.module.css
div.signInHolder {
  display: block;
  width: 300px;
  height: 500px;
  position: relative;
  top: 60px;
  margin-left: calc(50% - 150px);
  border-radius: 25px;
  background-color: white;
}

ul.demoAccount {
  list-style-type: none;
}

div.demoHolder {
  margin-top: 40px;
}

h1.demoAccountLabel {
  font-size: 17px;
  margin-top: -15px;
}

li.demoUsername {
  font-size: 15px;
}

li.demoPassword {
  font-size: 15px;
}

.signInLegend {
  margin-left: 0px;
  font-family: 'Merriweather';
  color: rgb(0, 140, 255);
  font-family: 'Pacifico';
  font-size: 25px;
  display: inline-block;
}

.signInButton {
  margin-top: 15%;
}

p.signUpLink {
  margin-top: 2px;
  margin-bottom: 8px;
}

p.error {
  color: rgb(179, 5, 5);
}

p.justSignedUp {
  color: red;
  font-family: 'Merriweather';
  font-size: 14px;
}

.demoPassword, .demoUsername {
  padding-left: 0px;
}

label.userNameLabel {
  display: block;
  margin-top: 20px;
  font-size: 15px;
  font-family: 'Merriweather';
}

input.signInUsername {
  -webkit-appearance: none;
  border: 2px solid rgb(199, 198, 198);
  background-color: white;
  display: inline-block;
  height: 30px;
  width: 50%;
  border-radius: 10px;
  transition: width 0.5s, box-shadow 0.5s;
  -webkit-transition: width 0.5s, box-shadow 0.5s;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0);
  text-indent: 5px;
  caret-color: grey;
  font-family: 'Merriweather';
}


input.signInUsername:focus {
  width: 65%;
  height: 40px;
  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
}

input.signInPassword {
  -webkit-appearance: none;
  border: 2px solid rgb(199, 198, 198);
  background-color: white;
  display: inline-block;
  height: 30px;
  width: 50%;
  border-radius: 10px;
  transition: width 0.5s, box-shadow 0.5s;
  -webkit-transition: width 0.5s, box-shadow 0.5s;
  text-indent: 5px;
  caret-color: grey;
  font-family: 'Merriweather';
}

input.signInPassword:focus {
  width: 65%;
  height: 40px;
  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
}

::placeholder {
  margin-left: 15px;
}

label.passwordLabel {
  display: block;
  margin-top: 30px;
  font-family: 'Merriweather';
  font-size: 15px;
}

div.loadingHolder {
  margin-left: 0%;
}

button.signInButton {
  color: #fff !important;
  text-transform: uppercase;
  text-decoration: none;
  background: rgb(0, 140, 255);
  padding: 20px 40px;
  border-radius: 50px;
  display: inline-block;
  border: none;
  transition: all 0.4s ease 0s;
  margin-top: 40px;
}

button.signInButton:hover {
  text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
  -webkit-box-shadow: 0px 5px 75px -10px rgba(0,0,0,0.57);
  -moz-box-shadow: 0px 5px 75px -10px rgba(0,0,0,0.57);
  transition: all 0.4s ease 0s;
  cursor: pointer;
}

h1.demoAccountLabel {
  font-family: 'Merriweather';
  color: rgb(0, 140, 255);
}

ul.demoAccount {
  font-family: 'Merriweather';
  font-size: 10px;
  margin-right: 40px;
  color: rgb(0, 140, 255);
}

@media only screen and (min-width: 350px) and (max-width: 450px) {
  div.signInHolder {
    display: block;
    width: 350px;
    height: 500px;
    position: relative;
    top: 120px;
    margin-left: calc(50% - 175px);
    border-radius: 25px;
    background-color: white;
  }
}

@media only screen and (min-width: 450px) {
  div.signInHolder {
    display: block;
    width: 450px;
    height: 520px;
    position: relative;
    top: 150px;
    margin-left: calc(50% - 225px);
    border-radius: 25px;
    background-color: white;
  }
}

